# ProjectCppEngine

./: CMakeLists.txt  README.md
engine/include/core/: engine.h  frame.h  window_frame.h
engine/include/input/: button_state.h  input.h
engine/include/logger/: crash_handler.h
engine/include/utils/: time_util.h
engine/include/window_frame/: window_frame.h  window_processor.h
engine/src/: input.cpp
engine/src/core/: engine.cpp  frame.cpp  window_frame.cpp
engine/src/logger/: crash_handler.cpp
engine/src/utils/: time_util.cpp
engine/src/window_frame/: window_frame.cpp  window_processor.cpp
game/src/: main.cpp
